Proper fix for units sidebar overlap.

--- a/client/app/reporting/reporting.scss
+++ b/client/app/reporting/reporting.scss
@@ -1,10 +1,9 @@
 .br-mailbox-list {
   left: auto !important;
-  width: auto !important;
 }
 
 .reporting-unit-body {
-  margin-left: 300px !important;
+  margin-left: 220px !important;
 }
 
 .progress-bar-step {
